--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
-    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.webp" />
@@ -22,6 +21,26 @@
       href="https://fonts.googleapis.com/css2?family=Sofia&display=swap"
       rel="stylesheet"
     />
+
+    <!-- DM san-serif  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Droid Serif -->
+    <link rel="stylesheet" href="https://use.typekit.net/fgo8khi.css" />
+
+    <!-- arimo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Snowtail Escapes</title>
   </head>
   <body>
