--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
       href="https://fonts.googleapis.com/css2?family=Sofia&display=swap"
       rel="stylesheet"
     />
+    <!-- DM san-serif  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Droid Serif -->
+    <link rel="stylesheet" href="https://use.typekit.net/fgo8khi.css" />
+
+    <!-- arimo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+
+    
     <title>Snowtail Escapes</title>
   </head>
   <body>
