--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="./public/logo/23.svg" />  
+    <link rel="icon" type="image/svg+xml" href="./public/NewLogos/4.svg" />  
 
     <!-- Droid Serif -->
     <link rel="stylesheet" href="https://use.typekit.net/fgo8khi.css" />
