--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="./public/NewLogos/4.svg" />
@@ -9,28 +9,91 @@
     <link rel="stylesheet" href="https://use.typekit.net/fgo8khi.css" />
 
     <!-- Arimo, DM Sans, Lora (font style) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Snowtail Escapes</title>
 
     <!-- Meta Tags for SEO and Social Media -->
-    <meta name="description" content="Snowtail Escapes is your ultimate destination for curated travel experiences, blending adventure, luxury, and cultural immersion. Our dedicated team of travel enthusiasts meticulously explores diverse locales, handpicking the finest local experiences and partnering with top-notch guides and vendors. Committed to sustainable tourism, Snowtail Escapes seeks to transform the travel landscape for the enduring benefit of local communities, tourists, the environment, and the industry at large." />
-    <meta name="keywords" content="travel, luxury, destinations, vacation, adventure, explore, journey, escape" />
+    <meta
+      name="description"
+      content="Snowtail Escapes is your ultimate destination for curated travel experiences, blending adventure, luxury, and cultural immersion. Our dedicated team of travel enthusiasts meticulously explores diverse locales, handpicking the finest local experiences and partnering with top-notch guides and vendors. Committed to sustainable tourism, Snowtail Escapes seeks to transform the travel landscape for the enduring benefit of local communities, tourists, the environment, and the industry at large."
+    />
+    <meta
+      name="keywords"
+      content="travel, luxury, destinations, vacation, adventure, explore, journey, escape"
+    />
     <meta name="author" content="Snowtail Escapes" />
-    <meta property="og:title" content="Snowtail Escapes - Your Luxurious Travel Destination" />
-    <meta property="og:description" content="Discover the best travel destinations, plan your luxurious journey, and create unforgettable memories with Snowtail Escapes." />
+    <meta
+      property="og:title"
+      content="Snowtail Escapes - Your Luxurious Travel Destination"
+    />
+    <meta
+      property="og:description"
+      content="Discover the best travel destinations, plan your luxurious journey, and create unforgettable memories with Snowtail Escapes."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.snowtailescapes.com" />
-    <meta property="og:image" content="https://www.snowtailescapes.com/logo.png" />
+    <meta
+      property="og:image"
+      content="https://www.snowtailescapes.com/logo.png"
+    />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Snowtail Escapes - Your Luxurious Travel Destination" />
-    <meta name="twitter:description" content="Discover the best travel destinations, plan your luxurious journey, and create unforgettable memories with Snowtail Escapes." />
-    <meta name="twitter:image" content="https://www.snowtailescapes.com/logo.png" />
-</head>
-<body>
+    <meta
+      name="twitter:title"
+      content="Snowtail Escapes - Your Luxurious Travel Destination"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover the best travel destinations, plan your luxurious journey, and create unforgettable memories with Snowtail Escapes."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.snowtailescapes.com/logo.png"
+    />
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "891104839714257");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=891104839714257&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+  </head>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-</body>
+  </body>
 </html>
